tdf#75341: fix condition to approve row (form)

Considering rColInfo.nNullable != ColumnValue::NO_NULLS is ok to approve row
isn't sufficient in the case the field is "Input required" in form.

Change-Id: I27c57fe8ce5afac97eb0650f93703333c85f1421